Simplify pipeline: remove bonus features and Windows-specific code for core task submission